--- a/app/src/main/res/menu/nav_list_menu.xml
+++ b/app/src/main/res/menu/nav_list_menu.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_calc"
-            android:icon="@drawable/ic_calc"
+            android:icon="@drawable/calculator_3534"
             android:title="@string/nav_item_calc" />
         <item
             android:id="@+id/nav_notices"
